modify style img

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height: auto;
 }
 
 #about {
@@ -70,6 +71,7 @@ body {
 
 .picture img {
 	width: 100%;
+	height: auto;
 
 }
 #about-me {
@@ -363,4 +365,9 @@ input[type="submit"] {
 	justify-content: space-around;
 	align-items: center;
 }
+
+/* img {
+	width: 100%;
+	height: auto;
+} */
 
