--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,8 @@ body {
 }
 .gallery .nav {
 	justify-content: center;
+	width: 100%;
+	height: auto;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
