--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,8 @@ body {
 	padding-inline: 100px;
 	padding-block: 100px;
 	position: relative;
+	width: 100%;
+	max-height: 1012px;
 }
 
 .picture.left::before {
