minification style.css & maugallery.js

--- a/assets/style.css
+++ b/assets/style.css
@@ -370,8 +370,8 @@ input[type="submit"] {
 	align-items: center;
 }
 
-#header {
+#header,
+.carousel-item > img  {
 	width: 100%;
 	max-height: 702px;
 }
-
